--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 language: csharp
-solution: Git_hub.sln
+solution: Git hub.sln
 install:
 - sudo apt-get install -y gtk-sharp2
-- nuget restore Git_hub.sln
+- nuget restore Git hub.sln
